BAEL-4457 add more examples of processing the objects and address comments